fix: removed warnings